group 'learning'
version '1.0-SNAPSHOT'

allprojects {
    apply plugin: 'idea'
    apply plugin: 'java'
    sourceCompatibility = 1.8
    targetCompatibility = 1.8
    group 'learning'
    version '1.0-SNAPSHOT'

}


subprojects {
    apply plugin: 'java'

    buildscript {
        repositories {
            mavenCentral()
        }
    }

    dependencies {
        repositories {
            mavenCentral()
        }

        compile 'io.dropwizard:dropwizard-core:' + dropwizardVersion,
                'io.dropwizard:dropwizard-testing:' + dropwizardVersion,
                'io.dropwizard:dropwizard-metrics-graphite:' + dropwizardVersion

        compile 'io.dropwizard.metrics:metrics-core:' + dropwizardMetric,
                'io.dropwizard.metrics:metrics-jvm:' + dropwizardMetric,
                'io.dropwizard.metrics:metrics-annotation:' + dropwizardMetric

        compile('com.hubspot.dropwizard:dropwizard-guice:' + '0.7.2.1') {
            exclude group: 'com.google.inject', module: 'guice_servlet'
        }

        compile 'org.projectlombok:lombok:' + lombokVersion

        compile 'com.sun.jersey:jersey-server:1.18'
        compile 'com.sun.jersey:jersey-core:1.18'
        compile 'com.sun.jersey:jersey-servlet:1.18'
        compile 'com.sun.jersey.contribs:jersey-multipart:1.18.1'
        compile ('org.reflections:reflections:0.9.10')

        compile "com.github.rholder:guava-retrying:1.0.7"


        compile 'commons-collections:commons-collections:3.0'

        compile 'com.google.inject.extensions:guice-multibindings:' + guiceVersion,
                'com.google.inject.extensions:guice-persist:' + guiceVersion

        compile 'org.slf4j:slf4j-api:' + slf4jVersion
        compile 'ch.qos.logback:logback-classic:1.1.3'


        compile 'org.jadira.usertype:usertype.extended:4.0.0.GA'

        // -------------------  Project specific dependencies START



        // ---------------------   Project specific dependencies END

        compile 'mysql:mysql-connector-java:5.1.28'
        compile 'org.apache.commons:commons-lang3:3.3.2'
        compile 'org.modelmapper:modelmapper:0.6.3'

        compile ('com.palominolabs.metrics:metrics-guice:3.1.3') {
            exclude group: 'com.google.inject'
        }

        testCompile group: 'junit', name: 'junit', version: '4.+'
        testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: '1.7.1'
        testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.9'
        testCompile group: 'org.hsqldb', name: 'hsqldb', version: '2.3.+'
        testCompile group: 'org.easymock', name: 'easymock', version: '3.+'
    }

    task allDeps(type: DependencyReportTask) {}

}

task createWrapper(type: Wrapper) {
    gradleVersion = '2.9'
}

project(":billing"){

}

project(":healthcheck"){

}

project(":subscription"){

}



repositories {
    mavenCentral()
}


ext.mainClassName = 'com.zolo.GeyserApplication'
ext.configFile = './src/main/resources/development.yaml'

buildscript {
    apply from: file('gradle/buildscript.gradle'), to: buildscript
}







project(":manager") {
    dependencies {
        compile project(':subscription')
        compile project(':billing')
        compile project(':healthcheck')


    }

    apply plugin: 'java'
    test {
        testLogging.showStandardStreams = true
    }

    apply plugin: 'maven-publish'

    publishing {
        publications {
            mavenJava(MavenPublication) {
                from components.java
            }
        }
    }
}



subprojects {
    configurations {
        all*.exclude group: 'com.fasterxml.jackson.dataformat'
        all*.exclude group: 'com.fasterxml.jackson.datatype'
        all*.exclude group: 'com.fasterxml.jackson.module'
        all*.exclude group: 'com.restbus', module: 'dropwizard-hibernate-plugin'
        all*.exclude group: 'com.sun.jersey.contribs'
        all*.exclude group: 'com.sun.jersey.jersey-test-framework'
        all*.exclude group: 'javassist', module: 'javassist'
        all*.exclude group: 'log4j', module: 'log4j'
        all*.exclude group: 'org.codehaus.jackson'
        all*.exclude group: 'org.jadira.usertype', module: 'usertype.jodatime'
        all*.exclude group: 'org.slf4j', module: 'log4j-over-slf4j'
        all*.exclude group: 'org.slf4j', module: 'slf4j-log4j12'
        all*.exclude group: 'org.slf4j', module: 'slf4j-simple'
        all*.exclude group: 'org.testng', module: 'testng'
    }

    sourceSets.main.output.resourcesDir = sourceSets.main.output.classesDir

    jar {
        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    }
}

apply from: file("gradle/common.gradle")

//import org.gradle.api.plugins.shadow.transformers.AppendingTransformer

project(":manager") {

    /*
    apply plugin: 'shadow'
    shadow {

        transformer(AppendingTransformer) {
            resource = 'META-INF/services/javax.persistence.spi.PersistenceProvider'
        }
        transformer(AppendingTransformer) {
            resource = 'META-INF/services/javax.ws.rs.ext.MessageBodyWriter'
        }
        transformer(AppendingTransformer) {
            resource = 'META-INF/services/javax.ws.rs.ext.MessageBodyReader'
        }

        exclude 'META-INF/*.DSA'
        exclude 'META-INF/*.RSA'

    }
    */
}

apply plugin: 'dropwizard-debian'

dropwizardDebian {
    adminPort = 42121
    jmxPort = 42122
    zip64 = true
    applicationName = "geyser-app"
    parentProject = "manager"
    javaOpts = "-Xms6g -Xmx6g -Xss512k -XX:NewRatio=1 -XX:+UseConcMarkSweepGC -XX:SurvivorRatio=4 " +
            "-XX:CompileThreshold=100 -XX:+PrintGCDetails -XX:+PrintGCTimeStamps " +
            "-Xloggc:/var/log/flipkart/sp/fk-ws-mediator/gc.log -XX:+CMSClassUnloadingEnabled"
    jreVersion = "8"
    shadowVersion = '4.0.3'
    enableLogAggregation = true
    enableConfigService = true
}

